# ope-ope

./: .env  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  serializers.py
data/: extracted_data.json
data/processing_output/: photo_1729653132212.json
services/: card_recognition.py  nlp_text_comparation.py
src/: app.py  send_tester.py  utils.py
src/data/: merry_cards_data_dump.json  mock.json
src/data/processing_output/: photo_1729652748735.json
src/services/: card_recognition.py  nlp_text_comparation.py
src/templates/: images.html
