[tool.poetry]
name = "ope-ope"
version = "0.1.0"
description = ""
authors = ["Vstahelin <vitorjosestahelin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
google-generativeai = "^0.8.3"
pillow = "^11.0.0"
black = "^24.10.0"
ruff = "^0.7.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
